# darkfurrow.com

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  almanac.py  app.py  docker-compose.yml  pyproject.toml
content/: manifest.json  moon-tips.md
content/bugs/: early-fall.md  early-spring.md  early-summer.md  late-fall.md  winter.md
content/chores/: early-fall.md  early-spring.md  early-summer.md  late-spring.md  midsummer.md  winter.md
content/companions/: early-fall.md  early-spring.md  early-summer.md  late-fall.md  late-spring.md  midsummer.md  winter.md
content/foraging/: early-fall.md  early-summer.md  late-fall.md  midsummer.md  winter.md
content/haiku/: early-summer.md  late-fall.md  late-spring.md
content/kitchen/: early-fall.md  early-spring.md  early-summer.md
content/moods/: early-spring.md  early-summer.md  late-fall.md  late-spring.md  winter.md
content/names/: early-spring.md  midsummer.md  winter.md
content/planting/: early-summer.md  late-fall.md  winter.md
content/preserving/: early-summer.md  late-fall.md
content/remedies/: early-fall.md  early-spring.md  midsummer.md
content/seasons/: early-spring.md  late-fall.md  winter.md
content/sky/: early-summer.md  late-spring.md
frontend/: package.json  vite.config.js
samplefiles/: Caddyfile.sample  post-receive.sample
site/: almanac.js  index.html  style.css  sw.js
src/: almanac.rs  app.rs  astro.rs  content.rs  error.rs  main.rs  markdown.rs  middleware.rs  rng.rs  templates.rs
static/: almanac.js  style.css  sw.js
templates/: index.html
(+66 files in other folders)
