[package]
name = "darkfurrow"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
minijinja = { version = "2", features = ["loader", "loop_controls"] }
comrak = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = "0.10"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
